# dynamic_type

./: .gitignore  CMakeLists.txt  LICENSE
include/: dynamic_type.hpp
include/extention_defines/: ext_if
src/: CMakeLists.txt  dynamic_type.cpp  types.cpp
